# dataflow-portfolio

./: .pre-commit-config.yaml  .safety-project.ini  .secrets.baseline  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
src/pipeline/: database_connection.py
tests/unit/: test_database_connection.py
