[tool.poetry]
name = "dataflow-portifolio"
version = "0.1.0"
description = ""
authors = ["Henrique Ferreira Henrique <hhycky@live.com>"]
license = "MiT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
