[tool.poetry]
name = "dataflow-portifolio"
version = "0.1.0"
description = ""
authors = ["Henrique Ferreira Henrique <hhycky@live.com>"]
license = "MiT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.39"
dotenv = "^0.9.9"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
pytest = "^8.3.5"
blue = "^0.9.1"
isort = "^6.0.1"
taskipy = "^1.14.1"
poetry-plugin-export = "^1.9.0"
pre-commit = "^4.1.0"
safety = "^3.3.1"
pytest-postgresql = "^7.0.0"
psycopg = {extras = ["binary"], version = "^3.2.6"}
pytest-dotenv = "^0.5.2"
pre-commit-hooks = "^5.0.0"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = "isort . && blue ."
precommit = "pre-commit run --all-files"
precommit-install = "pre-commit install"
test = "pytest tests/"
test-unit = "pytest tests/unit/"
test-integration = "pytest tests/integration/"



